--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,52 @@
 version: "3.9"
 
 services:
-  mysql:
-    image: mysql:8.0
-    container_name: sda_mysql
-    restart: always
-    env_file:
-      - .env
+    mysql:
+        image: mysql:8.0
+        container_name: sda_mysql
+        restart: always
+        env_file:
+            - .env
+        volumes:
+            - mysql_data:/var/lib/mysql
+            - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+        ports:
+            - "3307:3306"
+        networks:
+            - sda_network
 
-    volumes:
-      - mysql_data:/var/lib/mysql
-      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
-    ports:
-      - "3306:3306"
+    backend:
+        build: ./backend
+        container_name: sda_backend
+        restart: always
+        env_file:
+            - .env
+        ports:
+            - "8000:8000"
+        depends_on:
+            - mysql
+        networks:
+            - sda_network
+        volumes:
+            - ./backend:/app
 
+    frontend:
+        build: ./frontend
+        container_name: sda_frontend
+        restart: always
+        ports:
+            - "5173:5173"
+        depends_on:
+            - backend
+        networks:
+            - sda_network
+        volumes:
+            - ./frontend:/app
+            - /app/node_modules
 
 volumes:
-  mysql_data:
+    mysql_data:
 
+networks:
+    sda_network:
+        driver: bridge
