--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
     mysql:
         image: mysql:8.0
@@ -17,25 +15,21 @@ services:
 
     backend:
         build: ./backend
-        container_name: sda_backend
         restart: always
         env_file:
             - .env
-        ports:
-            - "8000:8000"
         depends_on:
             - mysql
         networks:
             - sda_network
         volumes:
             - ./backend:/app
+        command: gunicorn app.main:app -k uvicorn.workers.UvicornWorker -w 2 -b 0.0.0.0:8000
 
     frontend:
         build: ./frontend
         container_name: sda_frontend
         restart: always
-        ports:
-            - "5173:5173"
         depends_on:
             - backend
         networks:
@@ -43,6 +37,30 @@ services:
         volumes:
             - ./frontend:/app
             - /app/node_modules
+        command: npm run dev -- --host
+
+    nginx:
+        image: nginx:alpine
+        container_name: sda_nginx
+        restart: always
+        ports:
+            - "80:80"
+        volumes:
+            - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+        depends_on:
+            - backend
+            - frontend
+        networks:
+            - sda_network
+
+    k6:
+        image: grafana/k6
+        profiles: ["test"]
+        networks:
+            - sda_network
+        volumes:
+            - ./k6:/scripts
+        entrypoint: ["k6"]
 
 volumes:
     mysql_data:
