--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,7 +13,7 @@ services:
         networks:
             - sda_network
         healthcheck:
-            test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+            test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
             interval: 5s
             timeout: 5s
             retries: 10
@@ -27,8 +27,9 @@ services:
         networks:
             - sda_network
 
-    backend:
+    sda_backend:
         build: ./backend
+        container_name: sda_backend
         restart: always
         ports:
             - "8000:8000"
@@ -58,6 +59,7 @@ services:
 
 volumes:
     mysql_data:
+
 
 networks:
     sda_network:
