--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
+# Environment files
 .env
+.env.local
+.env.production
+.env.*.local
+
+# Python
 venv/
 .venv/
 __pycache__/
@@ -6,3 +12,19 @@ __pycache__/
 *.pyo
 *.pyd
 
+# Frontend build
+frontend/dist/
+frontend/build/
+frontend/node_modules
+
+# Logs
+*.log
+logs/
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
