--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,39 @@
-FROM node:20-alpine
+# ================================
+# Stage 1: Build the frontend
+# ================================
+FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-EXPOSE 5173
+# Copy package files
+COPY package*.json ./
 
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+# Install dependencies
+RUN npm ci
 
+# Copy source code
+COPY . .
+
+# Build argument for API URL
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
+# Build the application
+RUN npm run build
+
+# ================================
+# Stage 2: Serve with Nginx
+# ================================
+FROM nginx:alpine
+
+# Copy built files from builder stage
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+# Copy custom nginx configuration
+COPY nginx.frontend.conf /etc/nginx/conf.d/default.conf
+
+# Expose port 80
+EXPOSE 80
+
+# Start nginx
+CMD ["nginx", "-g", "daemon off;"]
