--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -44,40 +44,29 @@ server {
         limit_req zone=api_limit burst=20 nodelay;
 
         # Proxy settings
-        proxy_pass http://backend/;
+        proxy_pass http://backend/api/;
         proxy_http_version 1.1;
+	proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
         
         # Headers
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Connection "";
         
         # Timeouts
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        proxy_connect_timeout 1200s;
+        proxy_send_timeout 3600s;
+        proxy_read_timeout 3600s;
 
         # Buffer settings
-        proxy_buffering on;
+        proxy_buffering off;
         proxy_buffer_size 4k;
         proxy_buffers 8 4k;
         proxy_busy_buffers_size 8k;
     }
-
-    # Stricter rate limiting for auth endpoints
-    location /api/auth/ {
-        limit_req zone=auth_limit burst=5 nodelay;
-        
-        proxy_pass http://backend/auth/;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
+    
     # Frontend static files
     location / {
         proxy_pass http://frontend/;
@@ -87,6 +76,9 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
+
+	proxy_redirect http:// https://;
+
         # Cache control handled by frontend nginx
         proxy_cache_bypass $http_upgrade;
     }
