--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -38,7 +38,7 @@ services:
         build:
             context: ./backend
             dockerfile: Dockerfile
-        container_name: sda_backend
+        #container_name: sda_backend
         restart: always
         env_file:
             - .env
