--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,8 +1,8 @@
 services:
     mysql:
         image: mysql:8.0
+        restart: unless-stopped
         container_name: sda_mysql
-        restart: always
         env_file:
             - .env
         environment:
@@ -24,8 +24,8 @@ services:
 
     redis:
         image: redis:7-alpine
+        restart: unless-stopped
         container_name: sda_redis
-        restart: always
         networks:
             - sda_network
         healthcheck:
@@ -39,7 +39,7 @@ services:
             context: ./backend
             dockerfile: Dockerfile
         #container_name: sda_backend
-        restart: always
+        restart: unless-stopped
         env_file:
             - .env
         environment:
@@ -69,7 +69,7 @@ services:
             args:
                 VITE_API_URL: ${VITE_API_URL:-}
         container_name: sda_frontend
-        restart: always
+        restart: unless-stopped
         depends_on:
             - backend
         networks:
@@ -78,7 +78,7 @@ services:
     nginx:
         image: nginx:alpine
         container_name: sda_nginx
-        restart: always
+        restart: unless-stopped
         ports:
             - "8080:80"
         volumes:
