--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -5,18 +5,18 @@
 # Upstream backend server
 upstream backend {
     server backend:8000;
-    keepalive 32;
+    keepalive 128;
 }
 
 # Upstream frontend container (serving static files via nginx)
 upstream frontend {
     server frontend:80;
-    keepalive 32;
+    keepalive 64;
 }
 
 # Rate limiting zones
-limit_req_zone $binary_remote_addr zone=api_limit:10m rate=100r/s;
-limit_req_zone $binary_remote_addr zone=auth_limit:10m rate=10r/s;
+limit_req_zone $binary_remote_addr zone=api_limit:10m rate=2000r/s;
+limit_req_zone $binary_remote_addr zone=auth_limit:10m rate=200r/s;
 
 server {
     listen 80;
@@ -41,7 +41,7 @@ server {
     # API proxy to backend
     location /api/ {
         # Rate limiting
-        limit_req zone=api_limit burst=20 nodelay;
+        limit_req zone=api_limit burst=500 nodelay;
 
         # Proxy settings
         proxy_pass http://backend/api/;
@@ -56,15 +56,15 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         
         # Timeouts
-        proxy_connect_timeout 1200s;
-        proxy_send_timeout 3600s;
-        proxy_read_timeout 3600s;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
 
         # Buffer settings
-        proxy_buffering off;
-        proxy_buffer_size 4k;
-        proxy_buffers 8 4k;
-        proxy_busy_buffers_size 8k;
+        proxy_buffering on;
+        proxy_buffer_size 16k;
+        proxy_buffers 16 16k;
+        proxy_busy_buffers_size 32k;
     }
     
     # Frontend static files
