--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -80,20 +80,22 @@ services:
         container_name: sda_nginx
         restart: unless-stopped
         ports:
-            - "8080:80"
+            - "80:80"
+            - "443:443"
         volumes:
             - ./nginx/nginx.prod.conf:/etc/nginx/conf.d/default.conf:ro
+            - /etc/letsencrypt:/etc/letsencrypt:ro
         depends_on:
             - backend
             - frontend
         networks:
             - sda_network
         healthcheck:
-            test: [ "CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health" ]
+            test: [ "CMD", "wget", "--quiet", "--tries=1", "--spider", "http://127.0.0.1/health" ]
             interval: 30s
             timeout: 10s
             retries: 3
-
+    
 volumes:
     mysql_data:
         driver: local
