--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -1,26 +1,49 @@
 # ===========================================
-# Production Nginx Configuration
+# Production Nginx Configuration with SSL
 # ===========================================
 
-# Upstream backend server
 upstream backend {
     server backend:8000;
     keepalive 128;
 }
 
-# Upstream frontend container (serving static files via nginx)
 upstream frontend {
     server frontend:80;
     keepalive 64;
 }
 
-# Rate limiting zones
 limit_req_zone $binary_remote_addr zone=api_limit:10m rate=2000r/s;
 limit_req_zone $binary_remote_addr zone=auth_limit:10m rate=200r/s;
 
+# 1. Redirect HTTP (80) to HTTPS (443)
 server {
     listen 80;
-    server_name localhost;
+    server_name sda-psu888.xyz www.sda-psu888.xyz;
+
+    location /health {
+        proxy_pass http://backend/health;
+        access_log off;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# 2. HTTPS Server (443)
+server {
+    listen 443 ssl;
+    server_name sda-psu888.xyz www.sda-psu888.xyz;
+
+    # SSL Certificates (ต้องตรงกับ Path ใน Certbot)
+    ssl_certificate     /etc/letsencrypt/live/sda-psu888.xyz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/sda-psu888.xyz/privkey.pem;
+
+    # SSL Security Optimization
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 1d;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
@@ -28,46 +51,27 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-    # Logging
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log warn;
 
-    # Health check endpoint for load balancer
-    location /health {
-        proxy_pass http://backend/health;
-        access_log off;
-    }
-
-    # API proxy to backend
+    # API proxy
     location /api/ {
-        # Rate limiting
         limit_req zone=api_limit burst=500 nodelay;
-
-        # Proxy settings
         proxy_pass http://backend/api/;
         proxy_http_version 1.1;
-	proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        
-        # Headers
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # Timeouts
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
-
-        # Buffer settings
-        proxy_buffering on;
-        proxy_buffer_size 16k;
-        proxy_buffers 16 16k;
-        proxy_busy_buffers_size 32k;
     }
-    
-    # Frontend static files
+
+    # Frontend
     location / {
         proxy_pass http://frontend/;
         proxy_http_version 1.1;
@@ -75,21 +79,10 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
-
-	proxy_redirect http:// https://;
-
-        # Cache control handled by frontend nginx
         proxy_cache_bypass $http_upgrade;
     }
 
-    # Gzip compression
     gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss;
-    gzip_disable "msie6";
-
-    # Client body size limit
+    gzip_types text/plain text/css application/json application/javascript text/xml;
     client_max_body_size 10M;
 }
