--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
             
             # 4. สั่งรัน Docker Compose (Build ใหม่และรัน)
             echo 'REBUILDING CONTAINER...'
-            sudo docker compose up -d --build
+            sudo docker compose -f docker-compose.prod.yml up -d --build
             
             # 5. ลบ Image เก่าๆ ที่ไม่ใช้แล้ว (กันพื้นที่เต็ม)
             sudo docker image prune -f
