--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,8 @@ name: Deploy to VM
 on:
   push:
     branches: [ "main" ]
+  pull_request:
+    branches: [ main ]
 
 env:
   PROJECT_ID: "lab-sda-478603"
